--- a/gb/18/1/2/n10017614.md
+++ b/gb/18/1/2/n10017614.md
@@ -1,25 +1,25 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/upuqsh2796/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/upuqsh2796/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nitcek393/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nitcek393/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nitcek393/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nitcek393/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nitcek393/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nitcek393/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nitcek393/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nitcek393/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nitcek393/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nitcek393/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nitcek393/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nitcek393/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nitcek393/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nitcek393/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nitcek393/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nitcek393/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nitcek393/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nitcek393/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nitcek393/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nitcek393/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nitcek393/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nitcek393/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nitcek393/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nitcek393/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>让残障孩子上普通学校真的对他们有帮助吗？</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2018年01月02日讯】（大纪元记者温静澳洲悉尼编译报导）最近，一位老师表达了他对于现代教育理念中“不惜一切代价”让<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E6%AE%8B%E9%9A%9C%E5%AD%A9%E7%AB%A5.md">残障孩童</a>上<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E6%99%AE%E9%80%9A%E5%AD%A6%E6%A0%A1.md">普通学校</a>的疑虑。虽然他的学校支持这一“包容”理念，并且积极给予实施，但是这让他在管理班级时遇到不少困难。一名患有唐氏综合症的学生在课堂上的极端行为使周围环境越来越危险，导致其他学生和老师因担心自己的人身安全和心理健康而离开学校。</p>
-<p>我曾经看到过几次，老师和助教在“管理”一个学生的行为时，其他20多名学生只能耐心地坐着等待。我很好奇学生们每天到底要花多少时间在这样的等待上，是否会影响到他们的<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md">学习</a>。</p>
+<p>【大纪元2018年01月02日讯】（大纪元记者温静澳洲悉尼编译报导）最近，一位老师表达了他对于现代教育理念中“不惜一切代价”让<ahref="https://github.com/nitcek393/djy/blob/master/gb/tag/%E6%AE%8B%E9%9A%9C%E5%AD%A9%E7%AB%A5.md#1">残障孩童</a>上<ahref="https://github.com/nitcek393/djy/blob/master/gb/tag/%E6%99%AE%E9%80%9A%E5%AD%A6%E6%A0%A1.md#1">普通学校</a>的疑虑。虽然他的学校支持这一“包容”理念，并且积极给予实施，但是这让他在管理班级时遇到不少困难。一名患有唐氏综合症的学生在课堂上的极端行为使周围环境越来越危险，导致其他学生和老师因担心自己的人身安全和心理健康而离开学校。</p>
+<p>我曾经看到过几次，老师和助教在“管理”一个学生的行为时，其他20多名学生只能耐心地坐着等待。我很好奇学生们每天到底要花多少时间在这样的等待上，是否会影响到他们的<ahref="https://github.com/nitcek393/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>。</p>
 <p>我还想知道，孩子们在重复看到身患残疾的同学的行为后，是否会更加理解和容忍残疾人，还是正相反，认为残疾人很难相处，并且会引起混乱。</p>
-<p>我曾经为一个支持残疾人的组织工作，遇到很多家长对于是让患儿上<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E6%99%AE%E9%80%9A%E5%AD%A6%E6%A0%A1.md">普通学校</a>还是特殊学校而感到烦恼。关于这一问题的讨论是非常严肃的，参与讨论的人包括患儿的儿科医生以及多位医疗专家和教育专家。</p>
+<p>我曾经为一个支持残疾人的组织工作，遇到很多家长对于是让患儿上<ahref="https://github.com/nitcek393/djy/blob/master/gb/tag/%E6%99%AE%E9%80%9A%E5%AD%A6%E6%A0%A1.md#1">普通学校</a>还是特殊学校而感到烦恼。关于这一问题的讨论是非常严肃的，参与讨论的人包括患儿的儿科医生以及多位医疗专家和教育专家。</p>
 <p>大部分时候，我们的工作是支持普通学校接纳这些患儿。但有时候，我们确实担心这对孩子来说并不是最好的选择。有不少家长很难相信他们的孩子可以获得积极的教育经历。</p>
 <p>有时候，家长坚持让孩子上普通学校并不一定能获得好效果。我曾经认识一个有严重认知障碍的学生。上到高中时，她仍旧几乎不能读写，并且语言表达能力也有限。她的父母坚持让她上普通学校。为了不影响她的课业，她的父母甚至不让她与班上的同学一起参加学期末的远足活动。</p>
-<p>医生以及教育专家与她的父母多次谈过，应该让她多参加集体活动，学会在公共场合与人互动，而不是只专注于<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md">学习</a>知识。但是这些交流并没能改变她父母的做法。</p>
+<p>医生以及教育专家与她的父母多次谈过，应该让她多参加集体活动，学会在公共场合与人互动，而不是只专注于<ahref="https://github.com/nitcek393/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0.md#1">学习</a>知识。但是这些交流并没能改变她父母的做法。</p>
 <p>这个学生现在已经是一个成年人了。我仍能经常见到她。她的身边总是有一位家庭成员，当她的社交行为不当时，这位家庭成员就会纠正她。这让我思索，她在普通学校接受的教育经历到底让谁受益了呢？</p>
 <p>如果她上的是专为残疾人建立的特殊学校，她现在的状况会不会有所不同呢？特殊学校专注于教学生有用的生活技能，包括在公共场所与他人互动。她也许甚至会交到几个与她有相同兴趣爱好的朋友。</p>
 <p>虽然我仍旧相信让残障孩子上普通学校对他们会有好处，但这并不意味着这种做法对每一个孩子都是最合适的。有时候，让残障孩子进入普通学校学习，似乎是为了安抚家长们的焦虑。</p>
-<h2><a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E5%8C%85%E5%AE%B9%E6%95%99%E8%82%B2.md">包容教育</a>不总是有效的</h2>
+<h2><ahref="https://github.com/nitcek393/djy/blob/master/gb/tag/%E5%8C%85%E5%AE%B9%E6%95%99%E8%82%B2.md#1">包容教育</a>不总是有效的</h2>
 <p>包容哲学是建立在“接触假设”上的，也就是重复让有残疾的孩子接触人群，在这个过程中，普通学生也会学会接纳有不同需求的人，并建立友谊。</p>
 <p>但是，研究表明这样做并不一定能达到预期的效果。事实上，让有残疾的学生在普通学校里上课会增加普通学生对残疾人的负面态度。</p>
 <h2>需要找到平衡点</h2>
-<p>我们应该从一开始就自动认为<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E5%8C%85%E5%AE%B9%E6%95%99%E8%82%B2.md">包容教育</a>对每一个人都是最好的吗？一个残障孩子在普通学校中经常且激烈的行为，很有可能是为了离开让他们无法适应的环境。</p>
+<p>我们应该从一开始就自动认为<ahref="https://github.com/nitcek393/djy/blob/master/gb/tag/%E5%8C%85%E5%AE%B9%E6%95%99%E8%82%B2.md#1">包容教育</a>对每一个人都是最好的吗？一个残障孩子在普通学校中经常且激烈的行为，很有可能是为了离开让他们无法适应的环境。</p>
 <p>我们什么时候应该“听”他们的行为，并且接受“也许这对他们来说不是最好的地方”的看法？如何判定一个孩子在课堂上的行为已经达到无法忍受的程度，无论这种行为是不是有他们的疾病引起的？</p>
 <p>实施崇高理想的现实过程总是一团糟的。没有最佳做法。而人们已经开始担心，继续不顾孩子实际情况的实施会有损孩子的利益。</p>
 <p>责任编辑：瑞木悦</p>
@@ -27,40 +27,49 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/18/1/2/n10017614.htm">让残障孩子上普通学校真的对他们有帮助吗？</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/18/12/20/n10922741.htm">【文史新韵】品读林黛玉《五美吟》（下）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/12/13/n10909596.htm">【文史新韵】品读林黛玉《五美吟》（上）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/12/13/n10909511.htm">【文史新韵】姜太公遇贤主 助就周室八百秋</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/12/19/n10920460.htm">【文史新韵】贤妇人太姜 贞顺贤正 广布德教</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/12/11/n10902823.htm">【文史新韵】文王之母与最早的“胎教”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/12/10/n10902048.htm">【文史新韵】“太太”原来有这么好的寓意</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11878995.htm">【拍案惊奇】红会囤口罩 疫区粮食供应亮黄灯</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/12/31/n11758244.htm">【三国英雄11】乱世枭雄袁绍（文字版）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881049.htm">【新闻看点】疫情严峻3方甩锅 川普为习说好话</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881404.htm">北京西城成疫情重灾区 财政部员工住宅楼染疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880959.htm">当官的吃不完 贵州援助鄂州蔬菜烂在仓库</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879605.htm">【翻墙必看】分析：中国粮食危机再浮出水面</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880584.htm">刘真惊传住院 夫辛龙只称：做健康检查</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878231.htm">新冠病毒假阴性或有4大原因 会带来何风险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11877185.htm">芬兰3只小熊站成一圈跳舞 如童话般画面</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/13/n13374344.md#1">留学生返澳包机下月抵达悉尼 入境后无需隔离</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/10/n13366536.md#1">促进团结 培养认同感 昆州反对党吁学生每周唱国歌</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/9/n13363611.md#1">Coles集团与墨大合作 推出两项硕士奖学金</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/9/n13363768.md#1">新州HSC今日开考 迎6.9万名考生</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/8/n13360457.md#1">昆州高校2020年收入达13.5亿元</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/5/n13355188.md#1">自三月迄今 申请来澳国际留学生骤降逾五成</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/4/n13352211.md#1">澳五位科学家二位教师获2021年总理科学奖</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/2/n13347571.md#1">堪培拉新校明年开学 社区为新小学命名?</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/1/n13346169.md#1">国际留学生将于明年返回堪培拉</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/1/n13343868.md#1">解决餐饮业员工短缺 新州推免费培训课程</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/upuqsh2796/djy/blob/master/gb/18/1/2/n10017614.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/27/n10093465.md#1" target="_blank">林辉：江青法庭辩护词透露的真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/11/6/n4003814.md#1" target="_blank">信师信法　一路前行（下）</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/10/n13368067.md#1">【古韵流芳】大清国母 雄才大略的孝庄文皇后</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/10/n13368062.md#1">【未解之谜】时间只是人类的幻觉？！</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/5/n13356561.md#1">【百年真相】自由独立之殇 大师陈寅恪无处安身</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/5/n13356235.md#1">【未解之谜】外星人访谈录（1） 神秘的包裹</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/11/n13370142.md#1">【百年真相】1975年河南溃坝 23万人死亡之谜</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/13/n13374025.md#1">【财商天下】双11难掩消费疲弱 多地推刺激措施</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/13/n13373695.md#1">【十字路口】中共哑巴吃黄连 墙外再敲玻璃心</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/13/n13373677.md#1">【马克时空】美公布2021中共军力报告 台湾面临哪些威胁？</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/11/n13370542.md#1">六中全会公报泄习近平下一步动向</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/12/n13371327.md#1">擦撞玛莎拉蒂遭殴昏迷事件 荣总：男大生已清醒</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/12/n13371267.md#1">彭帅举报张高丽后失踪 法媒：发生了什么？</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/12/n13372784.md#1">隋棠低调现身姚元浩母亲告别式</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/12/n13372464.md#1">林依晨爱女小名曝光 满月礼精致丰富</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/11/n13370514.md#1">55岁李若彤挑战举重 身材纤细手臂肌肉发达</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/11/n13370355.md#1">女星演绎“紫霞仙子微笑”失败 朱茵暖心回应</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/12/n13370777.md#1">黄晓明拍戏被搧十巴掌致耳鸣 拍完还安慰对方</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/11/n13370097.md#1">维生素C不只防感冒 有4大好处 补充留意1点</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/11/n13368638.md#1">躺着就能放松肌肉 每天10分钟改善身体紧绷</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/12/n13371465.md#1">银行户头多11万英镑 英男买房后才知惨了</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/13/n13373110.md#1">吹哨人披露：辉瑞疫苗临床试验存在3大问题</a></li>
+<li><a href="https://github.com/nitcek393/djy/blob/master/gb/21/11/11/n13369079.md#1">【健康1+1】吹哨人揭：辉瑞疫苗临床试验3大问题</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nitcek393/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nitcek393/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/1/2/n10017614.htm">让残障孩子上普通学校真的对他们有帮助吗？</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nitcek393/djy/blob/master/gb/18/1/2/n10017614.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nitcek393/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nitcek393/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nitcek393/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nitcek393/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nitcek393/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
